# shooter2

./: CMakeLists.txt  ClanLibConfig.cmake  aligned_buffer.h  cl_error_codes.h  clangl.cpp  cryistal-castle-hidden-ramp.txt  cryistal-castle-hidden-ramp.txt.orig  cryistal-castle-hidden-ramp2x.txt  cryistal-castle-tree-wave.txt  crystal_bits.cpp  crystal_bits.h  cycle.h  fragment_shader.glsl  gl_bits.cpp  gl_bits.h  house1.txt  main.cpp  misc_utils.h  ortho.cpp  player_bits.cpp  player_bits.h  rad.cpp  rad_core.cl  rad_core.cpp  rad_core.h  scene_bits.cpp  scene_bits.h  test.cl  vec_unit.h
